# Cricksy_Scorer

./: .dockerignore  .env.example  .firebaserc  .gitattributes  .gitignore  .hintrc  .pre-commit-config.yaml  :memory  AGENT_MEMORY.md  ANALYSIS_MODE_BALL_TRACKING_IMPLEMENTATION.md  ANALYSIS_MODE_RESOLUTION_COMPLETE.md  BALL_TRACKING_INTEGRATION_PATCHES.md  CI_FIXES_SUMMARY.md  COACH_PRO_PLUS_ALL_PATCHES.md  COACH_PRO_PLUS_AUDIT.md  COACH_PRO_PLUS_BACKEND_COMPLETE_REPORT.md  COACH_PRO_PLUS_DELIVERABLES_INDEX.md  COACH_PRO_PLUS_DIFFS.md  COACH_PRO_PLUS_EXECUTIVE_SUMMARY.md  COACH_PRO_PLUS_FRONTEND_DIFFS.md  COACH_PRO_PLUS_IMPLEMENTATION_COMPLETE.md  COACH_PRO_PLUS_IMPLEMENTATION_SUMMARY.md  COACH_PRO_PLUS_QUICK_REFERENCE.md  COACH_PRO_PLUS_READY_TO_SHIP.md  COACH_PRO_PLUS_UNIFIED_DIFF.md  COACH_PRO_PLUS_VIDEO_ANALYSIS_FILE_MANIFEST.txt  COACH_PRO_PLUS_VIDEO_SESSIONS_QUICK_REF.md  COACH_PRO_PLUS_VIDEO_SESSIONS_READY.md  COACH_PRO_PLUS_VIDEO_SESSIONS_SCAFFOLDING.md  COACH_REPORT_V2_IMPLEMENTATION_SUMMARY.md  COACH_REPORT_V2_README.md  COMMIT_READY.md  COMPLETE_DELIVERABLES.md  COMPLETE_VIDEO_ANALYSIS_FLOW.md  CORS_AND_DEPLOYMENT_MEMORY.md  CRICKET_COACHING_METRICS_SUMMARY.txt  CRITIC_VERIFICATION_REPORT.md  DELIVERABLES.md  DEPLOYMENT_STATUS.md  DOCUMENTATION_INDEX.md  (+121 more)
.aws/: ML_INFRASTRUCTURE_README.md  ecs-ml-training-task-definition.json  eventbridge-targets.json  iam-s3-model-access-policy.json  setup_ml_infrastructure.sh
.continue/: config.yaml
.github/: copilot-instructions.md  pull_request_template.md
.mcp/: 00_DELIVERABLES.md  ANALYTICS_API_FIXES.md  README.md  (+34 more)
(+1201 files in other folders)
